--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,9 @@ html(lang="en")
 
   body
     block content
+
+    script(type='text/javascript').
+      var __src = 'http://placehold.it/550x550';
     script(src="/bower_components/jquery/dist/jquery.js")
     script(src="/bower_components/what-input/what-input.js")
     script(src="/bower_components/foundation-sites/dist/foundation.min.js")
