Moved variables from layout to index for easier reading.

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,3 +2,6 @@ extends layout
 
 block content
   div(id="app")
+
+  script(type='text/javascript').
+    var __src = 'http://placehold.it/550x550';
